--- a/GCodeViewer/GCodeViewer/Views/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/Views/MainWindow.xaml
@@ -16,18 +16,23 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
+        <StackPanel Orientation="Horizontal">
+            <Button Command="{Binding Commands/ExtractPath}"/>
+        </StackPanel>
         <Grid
             Grid.Row="1"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             Background="Olive">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="5" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <InkCanvas Grid.Column="0" Background="Blue" />
-            <TextBox Grid.Column="1" Background="Red" />
+            <InkCanvas Grid.Column="0" Background="LightGray" />
+            <Border Grid.Column="1" Background="DarkGray" />
+            <TextBox Grid.Column="2" Background="WhiteSmoke" />
         </Grid>
 
 
