--- a/GCodeViewer/GCodeViewer/Views/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/Views/MainWindow.xaml
@@ -12,77 +12,48 @@
     mc:Ignorable="d">
     <DockPanel>
         <StackPanel
+            Height="25"
             Background="CornflowerBlue"
             DockPanel.Dock="Top"
-            Orientation="Horizontal"
-            Height="25">
+            Orientation="Horizontal">
             <Menu VerticalAlignment="Center" VerticalContentAlignment="Center">
                 <MenuItem Header="File">
-                    <MenuItem Click="OpenFile_Click" Header="Open" />
+                    <MenuItem Header="Open" />
                     <MenuItem Header="Save" />
                     <MenuItem Header="Save as" />
                     <MenuItem Header="Close" />
                 </MenuItem>
             </Menu>
         </StackPanel>
-        <Border DockPanel.Dock="Top" Height="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="LightGray" />
+        <Border
+            Height="1"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Center"
+            Background="LightGray"
+            DockPanel.Dock="Top" />
 
         <DockPanel>
-            <Viewport3D MinWidth="400" DockPanel.Dock="Left">
-                <!--  Add a camera.  -->
+            <Viewport3D
+                x:Name="mainViewPort"
+                MinWidth="400"
+                DockPanel.Dock="Left">
                 <Viewport3D.Camera>
                     <PerspectiveCamera
-                        FarPlaneDistance="20"
-                        FieldOfView="40"
-                        LookDirection="0,0,1"
-                        NearPlaneDistance="1"
-                        Position="0,0,-3"
+                        FarPlaneDistance="100"
+                        FieldOfView="60"
+                        LookDirection="0,0,-1"
+                        NearPlaneDistance="0.1"
+                        Position="0,0,10"
                         UpDirection="0,1,0" />
                 </Viewport3D.Camera>
-
-                <!--  Add models.  -->
-                <Viewport3D.Children>
-
-                    <ModelVisual3D>
-                        <ModelVisual3D.Content>
-                            <Model3DGroup>
-                                <Model3DGroup.Children>
-
-                                    <!--  Lights, MeshGeometry3D and DiffuseMaterial objects are added to the ModelVisual3D.  -->
-                                    <SpotLight
-                                        Direction="0,0,1"
-                                        Position="0,0,-10"
-                                        Color="DarkOrange" />
-
-                                    <!--  Define a red cone.  -->
-                                    <GeometryModel3D>
-
-                                        <GeometryModel3D.Geometry>
-                                            <MeshGeometry3D
-                                                Normals="0.7236065,0.4472139,0.5257313  0.2763934,0.4472138,0.8506507  0.5308242,0.4294462,0.7306172  0.2763934,0.4472138,0.8506507  0,0.4294458,0.9030925  0.5308242,0.4294462,0.7306172  0.2763934,0.4472138,0.8506507  -0.2763934,0.4472138,0.8506507  0,0.4294458,0.9030925  -0.2763934,0.4472138,0.8506507  -0.5308242,0.4294462,0.7306172  0,0.4294458,0.9030925  -0.2763934,0.4472138,0.8506507  -0.7236065,0.4472139,0.5257313  -0.5308242,0.4294462,0.7306172  -0.7236065,0.4472139,0.5257313  -0.858892,0.429446,0.279071  -0.5308242,0.4294462,0.7306172  -0.7236065,0.4472139,0.5257313  -0.8944269,0.4472139,0  -0.858892,0.429446,0.279071  -0.8944269,0.4472139,0  -0.858892,0.429446,-0.279071  -0.858892,0.429446,0.279071  -0.8944269,0.4472139,0  -0.7236065,0.4472139,-0.5257313  -0.858892,0.429446,-0.279071  -0.7236065,0.4472139,-0.5257313  -0.5308242,0.4294462,-0.7306172  -0.858892,0.429446,-0.279071  -0.7236065,0.4472139,-0.5257313  -0.2763934,0.4472138,-0.8506507  -0.5308242,0.4294462,-0.7306172  -0.2763934,0.4472138,-0.8506507  0,0.4294458,-0.9030925  -0.5308242,0.4294462,-0.7306172  -0.2763934,0.4472138,-0.8506507  0.2763934,0.4472138,-0.8506507  0,0.4294458,-0.9030925  0.2763934,0.4472138,-0.8506507  0.5308249,0.4294459,-0.7306169  0,0.4294458,-0.9030925  0.2763934,0.4472138,-0.8506507  0.7236068,0.4472141,-0.5257306  0.5308249,0.4294459,-0.7306169  0.7236068,0.4472141,-0.5257306  0.8588922,0.4294461,-0.27907  0.5308249,0.4294459,-0.7306169  0.7236068,0.4472141,-0.5257306  0.8944269,0.4472139,0  0.8588922,0.4294461,-0.27907  0.8944269,0.4472139,0  0.858892,0.429446,0.279071  0.8588922,0.4294461,-0.27907  0.8944269,0.4472139,0  0.7236065,0.4472139,0.5257313  0.858892,0.429446,0.279071  0.7236065,0.4472139,0.5257313  0.5308242,0.4294462,0.7306172  0.858892,0.429446,0.279071  "
-                                                Positions="0.293893 -0.5 0.404509  0.475528 -0.5 0.154509  0 0.5 0  0.475528 -0.5 0.154509  0 0.5 0  0 0.5 0  0.475528 -0.5 0.154509  0.475528 -0.5 -0.154509  0 0.5 0  0.475528 -0.5 -0.154509  0 0.5 0  0 0.5 0  0.475528 -0.5 -0.154509  0.293893 -0.5 -0.404509  0 0.5 0  0.293893 -0.5 -0.404509  0 0.5 0  0 0.5 0  0.293893 -0.5 -0.404509  0 -0.5 -0.5  0 0.5 0  0 -0.5 -0.5  0 0.5 0  0 0.5 0  0 -0.5 -0.5  -0.293893 -0.5 -0.404509  0 0.5 0  -0.293893 -0.5 -0.404509  0 0.5 0  0 0.5 0  -0.293893 -0.5 -0.404509  -0.475528 -0.5 -0.154509  0 0.5 0  -0.475528 -0.5 -0.154509  0 0.5 0  0 0.5 0  -0.475528 -0.5 -0.154509  -0.475528 -0.5 0.154509  0 0.5 0  -0.475528 -0.5 0.154509  0 0.5 0  0 0.5 0  -0.475528 -0.5 0.154509  -0.293892 -0.5 0.404509  0 0.5 0  -0.293892 -0.5 0.404509  0 0.5 0  0 0.5 0  -0.293892 -0.5 0.404509  0 -0.5 0.5  0 0.5 0  0 -0.5 0.5  0 0.5 0  0 0.5 0  0 -0.5 0.5  0.293893 -0.5 0.404509  0 0.5 0  0.293893 -0.5 0.404509  0 0.5 0  0 0.5 0  "
-                                                TriangleIndices="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 " />
-                                        </GeometryModel3D.Geometry>
-
-
-                                        <GeometryModel3D.Material>
-                                            <DiffuseMaterial>
-                                                <DiffuseMaterial.Brush>
-                                                    <SolidColorBrush Opacity="1.0" Color="DarkOliveGreen" />
-                                                </DiffuseMaterial.Brush>
-                                            </DiffuseMaterial>
-                                        </GeometryModel3D.Material>
-
-                                    </GeometryModel3D>
-
-                                </Model3DGroup.Children>
-                            </Model3DGroup>
-
-                        </ModelVisual3D.Content>
-
-                    </ModelVisual3D>
-
-                </Viewport3D.Children>
+                <ModelVisual3D>
+                    <ModelVisual3D.Content>
+                        <Model3DGroup>
+                            <AmbientLight Color="#40FFFFFF" />
+                            <DirectionalLight Direction="1,-1,-1" Color="#FFFFFF" />
+                        </Model3DGroup>
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
 
             </Viewport3D>
             <Border
@@ -97,8 +68,8 @@
                 DockPanel.Dock="Right"
                 FontSize="14"
                 HorizontalScrollBarVisibility="Auto"
-                VerticalScrollBarVisibility="Visible"
-                TextChanged="Textblock_TextChanged"/>
+                TextChanged="Textblock_TextChanged"
+                VerticalScrollBarVisibility="Visible" />
         </DockPanel>
     </DockPanel>
 </Window>
