--- a/GCodeViewer/GCodeViewer/App.xaml
+++ b/GCodeViewer/GCodeViewer/App.xaml
@@ -3,7 +3,40 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:GCodeViewer"
-    StartupUri="Views/MainWindow.xaml">
+    StartupUri="MainWindow.xaml">
 
-    <Application.Resources />
+    <Application.Resources>
+        <SolidColorBrush x:Key="ToolbarBackgroundColor" Color="#202020" />
+        <SolidColorBrush x:Key="BackgroundColor" Color="#121212" />
+        <SolidColorBrush x:Key="FontColor" Color="#E1E1E1" />
+
+        <!--  Material Design Controls  -->
+        <SolidColorBrush x:Key="ButtonBackgroundColor" Color="#02dac5" />
+        <Style x:Key="DarkThemeButton" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True" />
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Foreground" Value="{StaticResource BackgroundColor}" />
+            <Setter Property="FontFamily" Value="Roboto" />
+            <Setter Property="FontWeight" Value="DemiBold" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border
+                            Padding="6,2,6,2"
+                            Background="{StaticResource ButtonBackgroundColor}"
+                            BorderBrush="{StaticResource BackgroundColor}"
+                            BorderThickness="2"
+                            CornerRadius="9">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Opacity" Value="0.8" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Application.Resources>
 </Application>
