added the bindings for the objects added the bindings to the buttons created the textviewmodel

--- a/GCodeViewer/GCodeViewer/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/MainWindow.xaml
@@ -36,9 +36,18 @@
                             Opacity="0.9"
                             Source="Icons/document-icon.png" />
                     </MenuItem.Icon>
-                    <MenuItem Foreground="{StaticResource BackgroundColor}" Header="Open" />
-                    <MenuItem Foreground="{StaticResource BackgroundColor}" Header="Save" />
-                    <MenuItem Foreground="{StaticResource BackgroundColor}" Header="Save As" />
+                    <MenuItem
+                        Command="{Binding OpenFileCommand}"
+                        Foreground="{StaticResource BackgroundColor}"
+                        Header="Open" />
+                    <MenuItem
+                        Command="{Binding SaveFileCommand}"
+                        Foreground="{StaticResource BackgroundColor}"
+                        Header="Save" />
+                    <MenuItem
+                        Command="{Binding SaveAsCommand}"
+                        Foreground="{StaticResource BackgroundColor}"
+                        Header="Save As" />
                 </MenuItem>
             </Menu>
         </StackPanel>
