created a working pageswapper

--- a/GCodeViewer/GCodeViewer/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/MainWindow.xaml
@@ -55,6 +55,7 @@
         <Frame
             x:Name="mainFrame"
             Background="{StaticResource BackgroundColor}"
+            Content="{Binding CurrentPage}"
             DockPanel.Dock="Bottom" />
     </DockPanel>
 </Window>
