--- a/GCodeViewer/GCodeViewer/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/MainWindow.xaml
@@ -56,6 +56,7 @@
             x:Name="mainFrame"
             Background="{StaticResource BackgroundColor}"
             Content="{Binding CurrentPage}"
-            DockPanel.Dock="Bottom" />
+            DockPanel.Dock="Bottom"
+            NavigationUIVisibility="Hidden" />
     </DockPanel>
 </Window>
