--- a/GCodeViewer/GCodeViewer/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/MainWindow.xaml
@@ -2,7 +2,7 @@
     x:Class="GCodeViewer.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:c="clr-namespace:GCodeViewer.Views.Controls"
+    xmlns:controls="clr-namespace:GCodeViewer.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:GCodeViewer"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -53,7 +53,7 @@
                 </MenuItem>
             </Menu>
         </StackPanel>
-        <c:NoNavigationFrame
+        <controls:NoNavigationFrame
             x:Name="mainFrame"
             Background="{StaticResource BackgroundColor}"
             Content="{Binding CurrentPage}"
