--- a/GCodeViewer/GCodeViewer/Views/Pages/LiveEditorPage.xaml
+++ b/GCodeViewer/GCodeViewer/Views/Pages/LiveEditorPage.xaml
@@ -49,7 +49,7 @@
         </Viewport3D>
 
 
-        <!--  // TODO:  -->
+        <!--  //TODO:  -->
         <GridSplitter
             Grid.Column="1"
             Width="3"
@@ -58,43 +58,18 @@
 
         <ListView
             Grid.Column="2"
-            AlternationCount="{Binding ActualFileContent.Count}"
             Background="{StaticResource BackgroundColor}"
             BorderThickness="0"
             Focusable="False"
             FontSize="12"
             Foreground="{StaticResource FontColor}"
-            ItemsSource="{Binding ActualFileContent}"
+            ItemsSource="{Binding FileContent}"
             ScrollViewer.CanContentScroll="True"
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <!--<ListView.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock
-                            Width="Auto"
-                            VerticalAlignment="Stretch"
-                            Foreground="{StaticResource SecondaryColor}"
-                            Text="{Binding LineNumber}" />
-                        <Border
-                            Width="1"
-                            Height="Auto"
-                            Margin="10" />
-                        <TextBlock
-                            Width="Auto"
-                            Height="Auto"
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            Background="{StaticResource BackgroundColor}"
-                            Foreground="{StaticResource FontColor}"
-                            Text="{Binding LineContent}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>-->
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding LineNumber}" Header="Num." />
-                    <GridViewColumn DisplayMemberBinding="{Binding LineContent}" Header="Line" />
+                    <GridViewColumn DisplayMemberBinding="{Binding}" />
                 </GridView>
             </ListView.View>
         </ListView>
