--- a/GCodeViewer/GCodeViewer/Views/Pages/LiveEditorPage.xaml
+++ b/GCodeViewer/GCodeViewer/Views/Pages/LiveEditorPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:h="http://helix-toolkit.org/wpf"
     xmlns:local="clr-namespace:GCodeViewer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LiveEditorPage"
@@ -10,44 +11,13 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
 
-    <Grid Background="{StaticResource BackgroundColor}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300" />
-            <ColumnDefinition Width="3" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+    <DockPanel Background="{StaticResource BackgroundColor}">
 
-        <Viewport3D
-            x:Name="liveRenderWindow"
-            Grid.Column="0"
-            MinWidth="400">
-            <Viewport3D.Camera>
-                <PerspectiveCamera
-                    FarPlaneDistance="100"
-                    FieldOfView="60"
-                    LookDirection="0,0,-1"
-                    NearPlaneDistance="0.1"
-                    Position="0,0,10"
-                    UpDirection="0,1,0" />
-            </Viewport3D.Camera>
-            <ModelVisual3D>
-                <ModelVisual3D.Content>
-                    <Model3DGroup>
-                        <AmbientLight Color="Bisque" />
-                        <DirectionalLight Direction="-3,-5,-2" Color="Red" />
-                        <GeometryModel3D>
-                            <GeometryModel3D.Geometry>
-                                <MeshGeometry3D Positions="0,-3,0 5,-3,0 5,-3,5 0,-3,5" TriangleIndices="0 2 1 0 3 2 " />
-                            </GeometryModel3D.Geometry>
-                            <GeometryModel3D.Material>
-                                <DiffuseMaterial Brush="Brown" />
-                            </GeometryModel3D.Material>
-                        </GeometryModel3D>
-                    </Model3DGroup>
-                </ModelVisual3D.Content>
-            </ModelVisual3D>
-        </Viewport3D>
-
+        <h:HelixViewport3D MinWidth="350" DockPanel.Dock="Left">
+            <h:DefaultLights />
+            <h:CubeVisual3D />
+            <h:GridLinesVisual3D />
+        </h:HelixViewport3D>
 
         <!--  //TODO:  -->
         <GridSplitter
@@ -57,9 +27,9 @@
             SnapsToDevicePixels="True" />
 
         <ListView
-            Grid.Column="2"
             Background="{StaticResource BackgroundColor}"
             BorderThickness="0"
+            DockPanel.Dock="Right"
             Focusable="False"
             FontSize="12"
             Foreground="{StaticResource FontColor}"
@@ -73,5 +43,5 @@
                 </GridView>
             </ListView.View>
         </ListView>
-    </Grid>
+    </DockPanel>
 </Page>
