--- a/GCodeViewer/GCodeViewer/App.xaml
+++ b/GCodeViewer/GCodeViewer/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="GCodeViewer.App"
+    x:Class="GCodeViewer.WPF.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:GCodeViewer"
