--- a/GCodeViewer/GCodeViewer/MainWindow.xaml
+++ b/GCodeViewer/GCodeViewer/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="GCodeViewer.MainWindow"
+    x:Class="GCodeViewer.WPF.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:GCodeViewer.Views.Controls"
