--- a/GCodeViewer/GCodeViewer/Views/Pages/LiveEditorPage.xaml
+++ b/GCodeViewer/GCodeViewer/Views/Pages/LiveEditorPage.xaml
@@ -1,11 +1,10 @@
 ﻿<Page
-    x:Class="GCodeViewer.Views.LiveEditorPage"
+    x:Class="GCodeViewer.WPF.Views.Pages.LiveEditorPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:c="clr-namespace:GCodeViewer.Views.Controls"
+    xmlns:c="clr-namespace:GCodeViewer.WPF.Views.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:h="http://helix-toolkit.org/wpf"
-    xmlns:local="clr-namespace:GCodeViewer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="LiveEditorPage"
     d:DesignHeight="450"
