--- a/GCodeViewer/GCodeViewer/Views/Pages/OpenFilePage.xaml
+++ b/GCodeViewer/GCodeViewer/Views/Pages/OpenFilePage.xaml
@@ -1,9 +1,8 @@
 ﻿<Page
-    x:Class="GCodeViewer.Views.OpenFilePage"
+    x:Class="GCodeViewer.WPF.Views.Pages.OpenFilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:GCodeViewer.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="OpenFilePage"
     d:DesignHeight="450"
