--- a/src/FirstTest/App.xaml
+++ b/src/FirstTest/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="FirstTest.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FirstTest"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="FirstTest.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:FirstTest"
+    StartupUri="MainWindow.xaml">
+    <Application.Resources />
 </Application>
