--- a/src/FirstTest/MainWindow.xaml
+++ b/src/FirstTest/MainWindow.xaml
@@ -8,6 +8,7 @@
     Title="MainWindow"
     Width="800"
     Height="450"
+    Closing="Window_Closing"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -15,6 +16,9 @@
             <ColumnDefinition Width="100" />
         </Grid.ColumnDefinitions>
 
-        <WindowsFormsHost Grid.Column="0" Initialized="WindowsFormsHost_Initialized" />
+        <WindowsFormsHost
+            Grid.Column="0"
+            Initialized="WindowsFormsHost_Initialized"
+            SizeChanged="WindowsFormsHost_SizeChanged" />
     </Grid>
 </Window>
