--- a/src/FirstTest/MainWindow.xaml
+++ b/src/FirstTest/MainWindow.xaml
@@ -8,7 +8,6 @@
     Title="MainWindow"
     Width="800"
     Height="450"
-    Closing="Window_Closing"
     mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -16,9 +15,6 @@
             <ColumnDefinition Width="100" />
         </Grid.ColumnDefinitions>
 
-        <WindowsFormsHost
-            Grid.Column="0"
-            Initialized="WindowsFormsHost_Initialized"
-            SizeChanged="WindowsFormsHost_SizeChanged" />
+        <WindowsFormsHost x:Name="winFormsHost" Grid.Column="0" />
     </Grid>
 </Window>
