everything done except for drawing the triangle

--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -8,6 +8,7 @@
     Title="MainWindow"
     Width="800"
     Height="450"
+    Unloaded="Window_Unloaded"
     mc:Ignorable="d">
     <WindowsFormsHost
         x:Name="WinFormsHost"
