triangle is draw although shaders do not work

--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -13,5 +13,6 @@
     <WindowsFormsHost
         x:Name="WinFormsHost"
         Loaded="WinFormsHost_Loaded"
+        SizeChanged="WinFormsHost_SizeChanged"
         Unloaded="WinFormsHost_Unloaded" />
 </Window>
