--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -3,16 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:OpenTkTest"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="800"
     Height="450"
     Unloaded="Window_Unloaded"
     mc:Ignorable="d">
+
     <WindowsFormsHost
         x:Name="WinFormsHost"
         Loaded="WinFormsHost_Loaded"
-        SizeChanged="WinFormsHost_SizeChanged"
-        Unloaded="WinFormsHost_Unloaded" />
+        SizeChanged="WinFormsHost_SizeChanged" />
+
 </Window>
