camera rotation does now work but is not relative to the current position of the camera

--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -10,9 +10,16 @@
     Unloaded="Window_Unloaded"
     mc:Ignorable="d">
 
-    <WindowsFormsHost
-        x:Name="WinFormsHost"
-        Loaded="WinFormsHost_Loaded"
-        SizeChanged="WinFormsHost_SizeChanged" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <WindowsFormsHost
+            x:Name="WinFormsHost"
+            Grid.Row="1"
+            Loaded="WinFormsHost_Loaded"
+            SizeChanged="WinFormsHost_SizeChanged" />
+    </Grid>
 
 </Window>
