--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -5,20 +5,14 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
-    Width="800"
-    Height="450"
+    Width="700"
+    Height="700"
+    ResizeMode="NoResize"
     Unloaded="Window_Unloaded"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <WindowsFormsHost
-            x:Name="WinFormsHost"
-            Grid.Row="1"
-            Loaded="WinFormsHost_Loaded"
-            SizeChanged="WinFormsHost_SizeChanged" />
-    </Grid>
+    <WindowsFormsHost
+        x:Name="WinFormsHost"
+        Loaded="WinFormsHost_Loaded"
+        SizeChanged="WinFormsHost_SizeChanged" />
 </Window>
