--- a/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
+++ b/src/OpenGL-Playground/OpenTkTest/MainWindow.xaml
@@ -10,5 +10,5 @@
     Height="700"
     mc:Ignorable="d">
 
-    <pcv:PointCloudViewer />
+    <pcv:PointCloudViewer x:Name="pclViewer" />
 </Window>
